# ui-designer

./: .eslintrc.cjs  .gitignore  BUILD_MACOS.md  BUILD_SUMMARY.md  CROSS_PLATFORM_BUILD.md  GITHUB_SETUP.md  MACOS_COMPATIBILITY.md  README.MD  build-macos.sh  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-macos.yml
src/: App.less  App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: generate_icons.py
src-tauri/res/: .env.development.local
src-tauri/src/: git_module.rs  main.rs
src/components/: EnvironmentCheckModal.css  EnvironmentCheckModal.tsx  GitCredentialsModal.tsx  SettingsDropdown.tsx  UiPageCard.tsx  WorkspaceInitModal.css  WorkspaceInitModal.tsx  WorkspaceSelector.css  WorkspaceSelector.tsx
src/utils/: debounce.ts  gitCredentials.ts
